# cars

./: .gitignore  Comments.py  README.md  Rennwagen.py  main.py  pyproject.toml  rennen.py  wuerfel.py
.github/workflows/: ci-cd-pipeline.yml  main.yml
model/: Rennwagen.py  comment.py  rennen.py  rennwagen.py  wuerfel.py
tests/: test.py  test_example.py
