[tool.poetry]
name = "cars"
version = "0.1.0"
description = ""
authors = ["Dein Name <dein.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.packages]
packages = find_packages(include = ["cars"] )

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
