[tool.poetry]
name = "cars"
version = "0.1.0"
description = "Rennbrettspiel"
authors = ["Dein Name <dein.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
